Fix bleeding backgrounds

--- a/css/yif.css
+++ b/css/yif.css
@@ -237,7 +237,7 @@ img.page-logo {
 .side-bleed {
     background-repeat: no-repeat;
     background-size: cover;
-    height: 220px;
+    height: 200px;
     transform: translateY(200%);
     -webkit-transform: translateY(200%);
 }
